// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout can be rendered as home 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <h1
        class="heading2Xl"
      >
        [Translation for http://localhost:3000/data/translations.ttl#appName does not exist]
      </h1>
    </header>
    <main>
      test
    </main>
  </div>
</DocumentFragment>
`;

exports[`Layout renders as non-home by default 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <h2
        class="headingLg"
      >
        <a
          class="colorInherit"
          href="/"
        >
          [Translation for http://localhost:3000/data/translations.ttl#appName does not exist]
        </a>
      </h2>
    </header>
    <main>
      test
    </main>
    <div
      class="backToHome"
    >
      <a
        href="/"
      >
        ← Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout renders error if something goes wrong 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <div>
      <em>
        Error when loading page...
      </em>
    </div>
    <div>
      Error
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout renders loading while fetching translations 1`] = `
<DocumentFragment>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</DocumentFragment>
`;
